PosTrack/PNLib-v3.1.33.5652/include/PNLib.h

// Remove sensor from prop.
PNLIB_API PNBOOL PNPropRemoveSensor(int avatarIndex, PropIdentity propId);
// Set length of prop.
PNLIB_API PNBOOL PNPropSetLength(int avatarIndex, PropIdentity propId, float probLength);
// Set initial offset of prop from parent end point.
PNLIB_API PNBOOL PNPropSetEndOffset(int avatarIndex, PropIdentity propId, Vector3_t offset);
// Set initial direction of prop.
PNLIB_API PNBOOL PNPropSetDirection(int avatarIndex, PropIdentity propId, Vector3_t direction);
// Set all parameters of prop.
PNLIB_API PNBOOL PNPropSetInfo(int avatarIndex, PropIdentity propId, PropInformation* pi);
// Get all parameters of prop.
PNLIB_API PNBOOL PNPropGetInfo(int avatarIndex, PropIdentity propId, PropInformation* piBuff);
// Handle prop node as a BVH child node. Default is 'true'.
PNLIB_API PNBOOL PNPropHandleNodeAsBVHPart(int avatarIndex, PropIdentity propId, PNBOOL enable);
PNLIB_API void PN_TEST_Set_h0(float h0);