PosTrack/PNLib-v3.1.33.5652/include/PNDataTypes.h

typedef int                  PNBOOL;   // There lots of different 'boolean' definition in different platform or compiler
// Prop identities
typedef enum _PropIdentity
{
    PI_Prop0,                // Prop0
	PI_Prop1,                // Prop1
	PI_Prop2,                // Prop2
	PI_Prop3,                // Prop3
	PI_Prop4,                // Prop4
	PI_RightShoulderExtra,   // Right shoulder extra
	PI_LeftShoulderExtra,    // Left shoulder extra
    PI_Unknown,              // Unknown type
}PropIdentity;
// Vector
typedef struct _Vector3_t
{
    float x;
    float y;
    float z;
}Vector3_t;
typedef struct _PropInformation
{
    int          BoneId;     // Bone index in standard bone table
    char         Name[32];   // Prop name
	PNBOOL       IsEnable;   // Whether enabled
    int          SensorId;   // Sensor Id bound to this prop
	int          ParentBoneId; // Parent bone id of prop
	float        Length;     // Prop length
	Vector3_t    Direction;  // Prop initial face direction
}PropInformation;