PosTrack/PNLib-v3.1.33.5652/include/PNLib.cs


        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropRemoveSensor(int avatarIndex, PropIdentity propId);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropSetLength(int avatarIndex, PropIdentity propId, float probLength);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropSetEndOffset(int avatarIndex, PropIdentity propId, Vector3_t offset);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropSetDirection(int avatarIndex, PropIdentity propId, Vector3_t rotate);
        
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropSetInfo(int avatarIndex, PropIdentity propId, PropInformation pi);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropGetInfo(int avatarIndex, PropIdentity propId, ref PropInformation piBuff);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropHandleNodeAsBVHPart(int avatarIndex, PropIdentity propId, bool enable);
        
        //===================================================
        // 测试用
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PN_TEST_Set_h0(float h0);
        //===================================================
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PN_TEST_EableOpenPerfTest(bool enable);


        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        // vector3_t x:Y y:Z z:X (按照YZX进行旋转)
        public static extern void PNSetThumbAngle(int avatarIndex, Vector3_t angle);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern Vector3_t PNGetThumbAngle(int avatarIndex);

    }
    #endregion
}
